<resources>
    <string name="app_name">SIIT - Android Fundamentals</string>
    <string name="hello_world">Hello World!</string>
    <string name="i_am_a_button">I am a button!</string>
    <string name="please_fill_the_input">Please fill the input</string>
    <string name="i_am_a_checkbox">I am a CheckBox :)</string>
    <string name="turn_on_off">Turn On/Off</string>
    <string name="search_query_hint">Search something</string>
    <string name="hello_from_java">Hello from Java side</string>
    <string name="new_text">New text</string>
    <string name="change_text">Change Text</string>
    <string name="required">Required</string>
    <string name="fruits">Fruits</string>
    <string name="hello_from_activity1">Hello from Activity1! :)</string>
    <string name="start_activity2">Start Activity2</string>
    <string name="hello_from_activity2">Hello from Activity2! :)</string>
    <string name="on_start">onStart</string>
    <string name="on_resume">onResume</string>
    <string name="on_pause">onPause</string>
    <string name="on_stop">onStop</string>
    <string name="on_restart">onRestart</string>
    <string name="on_destroy">onDestroy</string>
    <string name="on_create">onCreate</string>
    <string name="call">Call</string>
    <string name="open_url">Open URL</string>
    <string name="send_data">Send Data</string>
    <string name="start_activity_for_result">Start Activity For Result</string>
    <string name="send_data_back">Send Data Back</string>
    <string name="rating_bar_example">Rating Bar Example</string>
    <string name="current_rating">Current rating is </string>
    <string name="activities">Activities</string>
    <string name="implicit_intents">Implicit Intents</string>
    <string name="start_activity_with_intent">Start Activity with Intent</string>
    <string name="bundle">Bundle</string>
    <string name="activity_for_result">Activity for result</string>
    <string name="click">click</string>
    <string name="single_click">Single click</string>
    <string name="long_click">Long click</string>
    <string name="recyclerview_with_listener">RecyclerView with Listener</string>
    <string name="save_instance_state">Save Instance State</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="static_fragment">Static Fragment</string>
    <string name="dynamic_fragment">Dynamic Fragment</string>
    <string name="send_email_from_activity_to_fragment">Send Email from Activity to Fragment</string>
    <string name="send_name">Send name</string>
    <string name="method_activity_fragment"><![CDATA[Method Activity <-> Fragment]]></string>
    <string name="send_numbers">Send Numbers</string>
    <string name="fill_input">Fill the input</string>
    <string name="listener_activity_fragment"><![CDATA[Listener Activity <-> Fragment]]></string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_label1">Tab 1</string>
    <string name="tab_label2">Tab 2</string>
    <string name="tab_label3">Tab 3</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="tabs">Tabs</string>
    <string name="ancestral_navigation">Ancestral Navigation</string>
    <string name="go_to_second_activity">Go to second Activity</string>
    <string name="title_card_view">Blockchain doesn\'t matter. Here\'s why. Inside Design Blog</string>
    <string name="cardview_example">CardView Example</string>
    <string name="take_picture">Take picture</string>
    <string name="large_text">Scrolling text .... a lot of text added here....With a Raspberry Pi 3 you get access to 26 general purpose input/output pins (GPIO). That is to say you could potentially attach 26 different things to your</string>
    <string name="notice">Notice</string>
    <string name="alert_title">Title</string>
    <string name="launch_app">Launch app</string>
    <string name="reminde_me">Reminde me</string>
    <string name="cancel">Cancel</string>
    <string name="error_occured">Error occured</string>
    <string name="retry">Retry</string>
    <string name="retry_message">Please retry again</string>
    <string name="check_code">check the code :D</string>
    <string name="error_github">error Github users =</string>
    <string name="github_users">Github users =</string>
    <string name="alert">Alert</string>
    <string name="timepickerdialog">TimePicker</string>
    <string name="date">Date</string>
    <string name="file_saved">File saved</string>
    <string name="cannot_save">File not saved :(</string>
    <string name="cannot_write_external">No external storage</string>
    <string name="file_name">File name</string>
    <string name="create_file_internal">Create File Internal</string>
    <string name="read_file_internal">Read File Internal</string>
    <string name="create_file_external">Create File External</string>
    <string name="read_file_external">Read File External</string>
</resources>
