<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AndroidFundamentalsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_16">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="activitiesOnClick"
            android:text="@string/activities" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ratingBarOnClick"
            android:text="@string/rating_bar_example" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="recyclerViewListenerOnClick"
            android:text="@string/recyclerview_with_listener" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveInstanceStateOnClick"
            android:text="@string/save_instance_state" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="staticFragmentOnClick"
            android:text="@string/static_fragment" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="dynamicFragmentOnClick"
            android:text="@string/dynamic_fragment" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="methodFragmentOnClick"
            android:text="@string/method_activity_fragment" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="listenerFragmentOnClick"
            android:text="@string/listener_activity_fragment" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="navigationDrawerOnClick"
            android:text="Navigation Drawer" />
    </LinearLayout>

</ScrollView>